hphp/test/zend/bad/ext/gmp/tests/bug50175.php
<?php

var_dump(gmp_init('0bcd', 16));
var_dump(gmp_init('0xyz', 36));

?>
